Ajouter jeu maison mystérieuse

--- a/cuisine.html
+++ b/cuisine.html
@@ -7,13 +7,11 @@
     <title>Aventure</title>
   </head>
   <body>
-    <h1>Rangement</h1>
-    <p>
-      Vous decidez de faire du rangement dans votre maison. Par ou commencer ?</p>
+    <h1>cuisine</h1>
+    <p>Vous etes dans la cuisine. Que voulez-vous faire ?</p>
     <ul>
-      <li><a href="cave.html">Cave</a></li>
-      <li><a href="grenier.html">Grenier</a></li>
+      <li><a href="mourir.html">Goûter la soupe</a></li>
+      <li><a href="passage.html">Ouvrir le frigo</a></li>
     </ul>
-    <img src="Images/arbre.jpg" alt="Mon image" />
   </body>
 </html>
