--- a/salon.html
+++ b/salon.html
@@ -7,7 +7,11 @@
     <title>Aventure</title>
   </head>
   <body>
-    <h1>Passage</h1>
-    <p> Vous trouvez un passage secret et vous vous y aventurez. </p>
+    <h1>salon</h1>
+    <p>Vous etes dans le salon. Que voulez-vous faire ?</p>
+    <ul>
+      <li><a href="dangereux.html">Toucher le chandelier</a></li>
+      <li><a href="passage.html">Explorer la bibliotheque</a></li>
+    </ul>
   </body>
 </html>
