--- a/dangereux.html
+++ b/dangereux.html
@@ -7,7 +7,7 @@
     <title>Aventure</title>
   </head>
   <body>
-    <h1>Passage</h1>
-    <p> Vous trouvez un passage secret et vous vous y aventurez. </p>
+    <h1>Electrocuter</h1>
+    <p>Vous mourrez, le chandelier était électrifié ! !</p>
   </body>
 </html>
