--- a/mourir.html
+++ b/mourir.html
@@ -7,7 +7,7 @@
     <title>Aventure</title>
   </head>
   <body>
-    <h1>Passage</h1>
-    <p> Vous trouvez un passage secret et vous vous y aventurez. </p>
+    <h1>Mort</h1>
+    <p>Vous avez mangé la soupe et êtes mort !</p>
   </body>
 </html>
